change deprecated calls
Signed-off-by: achmelo <a.chmelo@gmail.com>